correcting some errors on smaller devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,12 +63,8 @@
     .custom-main {
         max-width: fit-content;
     }
-
-    .feature .col-md-6 {
-        width: 100%;
-    }
-    .footer {
-        width: 100%;
+    footer.footer {
+        max-width: 95%;
     }
 }
 
@@ -189,6 +185,15 @@
 }
 .feature p {
 	color: var(--primary-color);
+}
+@media (max-width:1200px){
+    .feature {
+        margin-right: 0;
+        max-width: 100%;
+    }
+    .col-md-6 {
+        width: 100% !important;
+    }
 }
 
 .owl-prev, .owl-next {
